deploy/deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: chowda
  name: chowda

spec:
  selector:
    matchLabels:
      app: chowda

  template:
    metadata:
      labels:
        app: chowda

    spec:
      containers:
        - image: ghcr.io/wgbh-mla/chowda:pr-89
          imagePullPolicy: Always
          name: chowda
          command:
            [
              'gunicorn',
              'chowda.app:app',
              '-b',
              '0.0.0.0:8000',
              '--workers',
              '4',
              '--worker-class',
              'uvicorn.workers.UvicornWorker',
              '--forwarded-allow-ips',
              '*',
            ]
