deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chowda
spec:
  selector:
    app: chowda
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
