deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chowda-ingress

spec:
  rules:
    - host: chowda.wgbh-mla.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chowda
                port:
                  # name: web
                  number: 80
  tls:
    - hosts:
        - chowda.wgbh-mla.org
      secretName: chowda-tls
